# Vestige

./: .clang-format  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ARCHITECTURE.md  ASSET_LICENSES.md  AUDIT.md  AUDIT_STANDARDS.md  AUDIT_TOOL_AND_WORKBENCH_IMPROVEMENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEPENDENCY_STANDARDS.md  DISCOVERY.md  EXPERIMENTAL.md  FIXPLAN.md  LICENSE  PHASE3_RESEARCH.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  TESTING.md  THIRD_PARTY_NOTICES.md  asan_suppressions.txt  imgui.ini
app/: CMakeLists.txt  cli_args.cpp  cli_args.h  main.cpp
engine/: CMakeLists.txt  engine_pch.h
engine/accessibility/: photosensitive_safety.cpp  photosensitive_safety.h  post_process_accessibility.cpp  post_process_accessibility.h
engine/animation/: animation_clip.cpp  animation_clip.h  animation_sampler.cpp  animation_sampler.h  animation_state_machine.cpp  animation_state_machine.h  audio_analyzer.cpp  audio_analyzer.h  easing.cpp  easing.h  eye_controller.cpp  eye_controller.h  facial_animation.cpp  facial_animation.h  facial_presets.cpp  facial_presets.h  feature_vector.cpp  feature_vector.h  ik_solver.cpp  ik_solver.h  inertialization.cpp  inertialization.h  kd_tree.cpp  kd_tree.h  lip_sync.cpp  lip_sync.h  mirror_generator.cpp  mirror_generator.h  morph_target.cpp  morph_target.h  motion_database.cpp  motion_database.h  motion_matcher.cpp  motion_matcher.h  motion_preprocessor.cpp  motion_preprocessor.h  skeleton.cpp  skeleton.h  skeleton_animator.cpp  skeleton_animator.h  (+8 more)
engine/audio/: acoustic_bake.cpp  acoustic_bake.h  acoustic_baker.cpp  acoustic_baker.h  acoustic_probe_component.h  audio_air_absorption.cpp  audio_air_absorption.h  audio_ambient.cpp  audio_ambient.h  audio_attenuation.cpp  audio_attenuation.h  audio_clip.cpp  audio_clip.h  audio_device_hotswap.cpp  audio_device_hotswap.h  audio_doppler.cpp  audio_doppler.h  audio_ducking.cpp  audio_ducking.h  audio_engine.cpp  audio_engine.h  audio_hrtf.cpp  audio_hrtf.h  audio_lod.cpp  audio_lod.h  audio_loudness.cpp  audio_loudness.h  audio_mix_monitor.cpp  audio_mix_monitor.h  audio_mixer.cpp  audio_mixer.h  audio_music.cpp  audio_music.h  audio_music_player.cpp  audio_music_player.h  audio_music_stream.cpp  audio_music_stream.h  audio_occlusion.cpp  audio_occlusion.h  audio_output_mode.cpp  (+13 more)
engine/core/: engine.cpp  engine.h  engine_paths.cpp  engine_paths.h  event.h  event_bus.cpp  event_bus.h  first_person_controller.cpp  first_person_controller.h  i_system.h  input_manager.cpp  input_manager.h  job_system.cpp  job_system.h  logger.cpp  logger.h  settings.cpp  settings.h  settings_apply.cpp  settings_apply.h  settings_editor.cpp  settings_editor.h  settings_migration.cpp  settings_migration.h  system_events.h  system_registry.cpp  system_registry.h  timer.cpp  timer.h  window.cpp  window.h
engine/editor/: command_history.cpp  command_history.h  editor.cpp  editor.h  editor_camera.cpp  editor_camera.h  entity_actions.cpp  entity_actions.h  entity_factory.cpp  entity_factory.h  file_menu.cpp  file_menu.h  material_preview.cpp  material_preview.h  prefab_system.cpp  prefab_system.h  recent_files.cpp  recent_files.h  scene_serializer.cpp  scene_serializer.h  selection.cpp  selection.h
engine/environment/: biome_preset.cpp  biome_preset.h  density_map.cpp  density_map.h  environment_forces.cpp  environment_forces.h  foliage_chunk.cpp  foliage_chunk.h  foliage_instance.h  foliage_manager.cpp  foliage_manager.h  grass_blade.h  grass_clump.h  grass_config.h  grass_lod.h  grass_placement.h  meadow_terrain.cpp  meadow_terrain.h  spline_path.cpp  spline_path.h  terrain.cpp  terrain.h  terrain_material_blend.h  terrain_material_set.cpp  terrain_material_set.h
engine/formula/: audio_templates.cpp  audio_templates.h  codegen_cpp.cpp  codegen_cpp.h  codegen_glsl.cpp  codegen_glsl.h  curve_fitter.cpp  curve_fitter.h  expression.cpp  expression.h  expression_eval.cpp  expression_eval.h  formula.cpp  formula.h  formula_benchmark.cpp  formula_benchmark.h  formula_doc_generator.cpp  formula_doc_generator.h  formula_library.cpp  formula_library.h  formula_preset.cpp  formula_preset.h  lut_generator.cpp  lut_generator.h  lut_loader.cpp  lut_loader.h  node_graph.cpp  node_graph.h  physics_templates.cpp  physics_templates.h  quality_manager.cpp  quality_manager.h  safe_math.h  sensitivity_analysis.cpp  sensitivity_analysis.h
engine/input/: input_bindings.cpp  input_bindings.h  input_bindings_wire.cpp  input_bindings_wire.h
engine/localization/: localization_service.cpp  localization_service.h  string_table.cpp  string_table.h
engine/navigation/: nav_agent_component.cpp  nav_agent_component.h  nav_mesh_builder.cpp  nav_mesh_builder.h  nav_mesh_config.h  nav_mesh_query.cpp  nav_mesh_query.h
engine/physics/: breakable_component.cpp  breakable_component.h  bvh.cpp  bvh.h  cloth_presets.h  (+53 more)
tests/: CMakeLists.txt  cloth_test_helpers.h  color_grading_test_helpers.h  editor_command_test_helpers.h  gl_test_fixture.cpp  gl_test_fixture.h  lsan_guard.h  physics_test_helpers.h  posix_env_shim.h  shader_parity_helpers.cpp  shader_parity_helpers.h  skeleton_test_helpers.h  sprite_test_helpers.h  subtitle_test_helpers.h  test_aabb.cpp  test_acoustic_bake.cpp  test_acoustic_baker.cpp  test_acoustics_index_load.cpp  test_advanced_physics.cpp  test_animation_curve.cpp  test_animation_sampler.cpp  test_animation_state_machine.cpp  test_architectural_tools.cpp  test_asset_locator.cpp  test_async_driver.cpp  test_async_texture_loader.cpp  test_atomic_write_routing.cpp  test_audio_air_absorption.cpp  test_audio_ambient.cpp  test_audio_analyzer.cpp  test_audio_attenuation.cpp  test_audio_buffer_cache.cpp  test_audio_curves_parity.cpp  test_audio_device_swap.cpp  test_audio_doppler.cpp  test_audio_ducking.cpp  test_audio_engine_sandbox.cpp  test_audio_hrtf.cpp  test_audio_lod.cpp  test_audio_loudness.cpp  (+236 more)
tools/: CMakeLists.txt  hook-on-version-edit.sh  hook-pretool-bash-frugal.sh  localization_audit.py  perf_gate.py  shader_lint.py  tsan_suppressions.txt
(+975 files in other folders)
